# SOAP

./: CMakeLists.txt  README.md  bdfIO.cpp  bdfIO.h  conanfile.py  cutPlaneGenerator.cpp  cutPlaneGenerator.h  d3derr.h  meshData.cpp  meshData.h  planarMeshing.cpp  planarMeshing.h  seamDesigner.cpp  seamDesigner.h  soap.cpp  soap_old.cpp  utils.cpp  utils.h
